# acer_cloud_wifi_copy

./: README.md
sw_x/: BUILD  BUILD.defs  Makefile  make_log.txt
sw_x/.svn/: all-wcprops  dir-prop-base  entries
sw_x/.svn/text-base/: BUILD.defs.svn-base  BUILD.svn-base
sw_x/devtools/: BUILD
sw_x/devtools/.svn/: all-wcprops  entries
sw_x/devtools/android/: emulator-wait
sw_x/devtools/setenv/: shared_defs.mk
sw_x/devtools/win32/: win32_env_defs.mk
sw_x/es_core/: BUILD
sw_x/es_core/.svn/: all-wcprops  entries
sw_x/es_core/include/: escore.h
sw_x/es_core/km_include/: km_types.h
sw_x/es_core/user_local/: escore_base.c
sw_x/gvm_apps/.svn/: all-wcprops  entries
sw_x/gvm_apps/android_cc_sdk/: README.txt
sw_x/gvm_apps/imltool/: BUILD
sw_x/gvm_apps/repair_tool/: BUILD
sw_x/gvm_core/.svn/: all-wcprops  entries
sw_x/gvm_core/conf/: ccd.conf.tmpl
sw_x/gvm_core/daemons/ccd/sdk/samples/notes/: CMakeLists.txt  command.cpp  conv.hpp  db-tasks.cpp  db.cpp  db.hpp  file.cpp  file.hpp  sync-tasks.hpp  sync.cpp  thread.hpp
sw_x/gvm_core/daemons/ccd/sdk/samples/notes/.svn/: all-wcprops  entries
sw_x/gvm_core/daemons/ccd/sdk/samples/notes/.svn/text-base/: README.txt.svn-base  command.hpp.svn-base  db-tasks.hpp.svn-base  event.cpp.svn-base  event.hpp.svn-base  file-tasks.cpp.svn-base  file-tasks.hpp.svn-base  main.cpp.svn-base  sync-tasks.cpp.svn-base  sync.hpp.svn-base  task.cpp.svn-base  task.hpp.svn-base  thread.cpp.svn-base
sw_x/gvm_core/vpl/: BUILD
sw_x/gvm_core/vplex/: BUILD
sw_x/installer/.svn/: all-wcprops  entries
sw_x/make/: .common_defs.mk.swp  cloudnode_defs.mk  common_defs.mk  cygwin_defs.mk  kernel_module.mk  linux_emb_defs.mk  linux_emb_defs.mk_ori  mac_defs.mk  makegen.py  product_defs.mk  product_defs.py
sw_x/make/.svn/: all-wcprops  entries
sw_x/make/makegen/: custom.py  internal_defs.py  protobuf.py  shared_cpp_lib.py  static_cpp_lib.py
sw_x/make/scripts/: remove_internal_source.py
sw_x/projects/.svn/: all-wcprops  entries
sw_x/storageNode/: BUILD
sw_x/storageNode/.svn/: all-wcprops  entries
sw_x/storageNode/src/: HttpSvc_Sn_ASFileSender.cpp  HttpSvc_Sn_ASFileSender.hpp  HttpSvc_Sn_Dispatcher.hpp  HttpSvc_Sn_Handler.hpp  HttpSvc_Sn_Handler_mediafile.cpp  HttpSvc_Sn_Handler_mediafile.hpp  HttpSvc_Sn_Handler_mm.cpp  HttpSvc_Sn_Handler_rexe.cpp  HttpSvc_Sn_Handler_rf.cpp  HttpSvc_Sn_Handler_rf.hpp  HttpSvc_Sn_Handler_vcs_archive.cpp  HttpSvc_Sn_Handler_vcs_archive.hpp  HttpSvc_Sn_MediaFile.hpp  HttpSvc_Sn_MediaFileSender.cpp  HttpSvc_Sn_MediaFileSender.hpp  HttpSvc_Sn_MediaFsFile.cpp  HttpSvc_Sn_MediaFsFile.hpp  HttpSvc_TsToHsAdapter.cpp  dataset.cpp  dataset.hpp  echoSvc.cpp  generic_cache.hpp  rf_search.cpp  rf_search_manager.hpp  strm_dlna.h  strm_http.cpp  strm_http.hpp  vss_client.hpp  vss_cmdproc.cpp  vss_file.cpp  vss_file.hpp  vss_object.cpp  vss_p2p_client.hpp  vss_query.hpp  vss_server.cpp  vss_server.hpp  vss_session.cpp  vss_session.hpp  vss_util.cpp  vssts_srvr.cpp  (+2 more)
sw_x/tests/: README
sw_x/tests/.svn/: all-wcprops  entries
sw_x/tests/ccd/: Makefile  test_file_list.txt  test_file_list_msvc.txt  valgrind.supp
sw_x/tests/datasetdb/: Makefile
sw_x/tests/doc_save_n_go/: test-10uploads-5renames.sh  test-bad-rename.sh
sw_x/tests/dx_remote_agent/: BUILD  DxRemoteAgentListener.cpp  DxRemoteAgentManager.hpp  DxRemoteHTTPAgent.cpp  DxRemoteHTTPAgent.hpp  DxRemoteMSAAgent.cpp  DxRemoteOSAgent.cpp  DxRemoteQueryDeviceAgent.cpp  DxRemoteTSTestAgent.hpp  IDxRemoteAgent.h  (+2 more)
sw_x/tools/: check_all_tests_executed.sh
(+4891 files in other folders)
